Updated params